syntax = "proto3";
package grpc;
option go_package = "github.com/benji-bou/lugh/core/plugins/grpc";

message RunInputConfig {
  bytes config = 1;
}

message InputSchema {
  bytes config = 1;
}

message DataStream {
  bytes data = 1;
  string parentSrc = 2;
  string id = 3;
  bool isComplete = 4;
  int64 totalLen = 5;
}


message RunStream {
  DataStream data = 1;
  Error error = 2;
}

message Empty {}

message Error {
  string message = 1;
}


service IOWorkerPlugins {
  rpc GetInputSchema(Empty) returns (InputSchema);
  rpc Config(RunInputConfig)   returns (Empty);
  rpc Run(stream DataStream)  returns (stream RunStream);
}
